# Onlyrefs

./: .gitignore  .prettierignore  README.md  bun.lockb  components.json  devenv.nix  devenv.yaml  fontvariation.js  index.html  package-lock.json  package.json  serenity.properties  tailwind.config.js  tailwind.config.ts  tailwind.fonts.ts  tailwind.preset.ts  tsconfig.json  tsconfig.node.json  ui.preset.js  vite.config.ts  wdio.conf.ts
.github/workflows/: build.yml  main.yml
src/: App.css  App.tsx  index.css  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/resources/: metadata.image.json  metadata.json  metadata.note.json
src-tauri/src/: commands.rs  config.rs  main.rs  media.rs  parser.rs  state.rs  utils.rs
src/components/: Board.tsx  BoardItem.tsx  BoardItemSkelettong.tsx  Navigation.tsx  WindowDecoration.tsx
src/components/Board/: Board.hook.tsx  Board.tsx  Board.types.ts
src/components/BoardItem/: BoardItem.tsx  BoardItem.types.ts  BoardNoteItem.tsx
src/components/BoardList/: BoardList.tsx
src/components/Mason/: index.tsx
src/components/Navigation/: Navigation.tsx  useUpdatePoll.tsx
src/components/ViewBox/: ViewBox.tsx  ViewBox.types.ts  ViewBoxInfo.tsx  ViewBoxTags.tsx  ViewBoxZoom.tsx  ViewNoteEditor.tsx
src/components/ui/: avatar.tsx  button.tsx  card-old.tsx  context-menu.tsx  dialog.tsx  input.tsx  label.tsx  progress-old.tsx  progress.tsx  skeleton.tsx  toggle.tsx  tooltip.tsx
src/hooks/: useGridSize.ts  useTauriListeners.ts
src/lib/: commands.ts  config.ts  helper.ts  types.ts  utils.test.ts  utils.ts
src/pages/: Boards.tsx  Home.tsx  Lib.tsx  Settings.tsx  index.tsx  layout.tsx
src/pages/boards/: Boards.tsx
src/pages/home/: Home.tsx
src/resources/: refs.resource.ts  settings.resource.ts
src/services/: refs.service.ts  settings.service.ts
src/state/: hook.tsx  index.tsx  refstore.tsx  settingsStore.tsx  store.tsx
test/serenity/github-api/: GitHubStatus.ts
test/serenity/todo-list-app/: TodoList.ts  TodoListItem.ts
test/specs/: example.spec.tk
