[package]
name = "only-refs"
version = "0.0.2"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
tauri = { version = "1.6.1", features = [
  "clipboard-write-text",
  "window-set-title",
  "window-unminimize",
  "window-show",
  "window-hide",
  "window-close",
  "window-minimize",
  "window-start-dragging",
  "window-unmaximize",
  "window-maximize",
  "protocol-asset",
  "path-all",
  "fs-all",
  "dialog-open",
  "shell-open",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22.0"
rand = "0.8.5"
mime_guess = "2.0.4"
image = "0.24.9"
window-shadows = "0.2.2"
chrono = "0.4.34"
kmeans_colors = "0.5.0"
palette = "0.6.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
