[package]
name = "only-refs"
version = "0.0.6"
description = "All your references in a single place"
authors = ["Ngobo Ridy"]
edition = "2021"


[build-dependencies]
tauri-build = { version = "1.5.2", features = [] }

[dependencies]
tauri = { version = "1.6.6", features = [
  "updater",
  "clipboard-write-text",
  "window-set-title",
  "window-unminimize",
  "window-show",
  "window-hide",
  "window-close",
  "window-minimize",
  "window-start-dragging",
  "window-unmaximize",
  "window-maximize",
  "protocol-asset",
  "path-all",
  "fs-all",
  "dialog-open",
  "shell-open",
] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
base64 = "0.22.1"
rand = "0.8.5"
mime_guess = "2.0.4"
image = "0.24.6"
window-shadows = "0.2.2"
chrono = "0.4.38"
kmeans_colors = "0.6.0"
palette = "0.7.6"
fxhash = "0.2.1"
log = "^0.4.21"
urlencoding = "2.1.3"
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-context-menu = { git = "https://github.com/c2r0b/tauri-plugin-context-menu", branch = "main" }

[dependencies.tauri-plugin-snapshot]
git = "https://github.com/Fractal-Tess/tauri-plugin-snapshot"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
