[package]
name = "only-refs"
version = "0.0.6"
description = "All your references in a single place"
authors = ["Ngobo Ridy"]
edition = "2021"


[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [
  "protocol-asset",
] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.118"
base64 = "0.22.1"
rand = "0.8.5"
mime_guess = "2.0.5"
image = "0.24.6"
window-shadows = "0.2.2"
chrono = "0.4.38"
kmeans_colors = "0.6.0"
palette = "0.7.6"
fxhash = "0.2.1"
log = "^0.4.22"
urlencoding = "2.1.3"
tauri-plugin-log = { version = "2" }
tauri-plugin-window-state = { version = "2" }
tauri-plugin-context-menu = { git = "https://github.com/c2r0b/tauri-plugin-context-menu", branch = "main" }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

[dependencies.tauri-plugin-snapshot]
git = "https://github.com/Fractal-Tess/tauri-plugin-snapshot"


[features]
custom-protocol = ["tauri/custom-protocol"]
